@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2346 2003/05/28 07:27:56 agc Exp $
+$NetBSD: CHANGES,v 1.2347 2003/05/28 08:26:30 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2185,3 +2185,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Added mbmon-201 [agc 2003-05-28]
 	Updated mldonkey to 2.5.0nb1 [wiz 2003-05-28]
 	Added xmbmon-201 [agc 2003-05-28]
+	Added adobeps-win-1.0.6 [jlam 2003-05-28]
